--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+  "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -15,6 +15,8 @@
     "morgan": "~1.6.1",
     "mysql": "^2.9.0",
     "serve-favicon": "~2.3.0",
-    "twilio": "^2.3.0"
+    "twilio": "^2.3.0",
+    "express-session": "^1.7.6",
+    "passport" : "^0.2.1"
   }
 }
